--- a/Views/Orders/Confirm.cshtml
+++ b/Views/Orders/Confirm.cshtml
@@ -197,6 +197,8 @@
 
         $(document).ready(function () {
 
+            $('#liPageName').text('Orders');
+            $('#h6PageName').text('Confirm');
 
             $('html').attr('lang', $('#hdnLang').val());
             $('html').attr('dir', $('#hdnDir').val());
