--- a/Views/Orders/Customer.cshtml
+++ b/Views/Orders/Customer.cshtml
@@ -9,6 +9,9 @@
 
     $(document).ready(function () {
 
+        $('#liPageName').text('Customer');
+        $('#h6PageName').text('Customers');
+
         $('html').attr('lang', $('#hdnLang').val());
         $('html').attr('dir', $('#hdnDir').val());
 
