--- a/Views/Orders/Delivery.cshtml
+++ b/Views/Orders/Delivery.cshtml
@@ -14,6 +14,9 @@
 
         $(document).ready(function () {
 
+            $('#liPageName').text('Order');
+            $('#h6PageName').text('Delivery');
+
             $('html').attr('lang', $('#hdnLang').val());
             $('html').attr('dir', $('#hdnDir').val());
 
