--- a/Views/Orders/Salesreport.cshtml
+++ b/Views/Orders/Salesreport.cshtml
@@ -46,6 +46,14 @@
 
     <script src="~/Scripts/appsettings.js"></script>
 
+    <script>
+        $(document).ready(function () {
+
+            $('#liPageName').text('Report');
+            $('#h6PageName').text('Sales Report');
+
+        });
+    </script>
 
 </head>
 
