--- a/Views/Orders/voucher.cshtml
+++ b/Views/Orders/voucher.cshtml
@@ -10,6 +10,9 @@
 
     $(document).ready(function () {
 
+        $('#liPageName').text('Voucher');
+        $('#h6PageName').text('Vouchers');
+
         $('html').attr('lang', $('#hdnLang').val());
         $('html').attr('dir', $('#hdnDir').val());
 
