--- a/Views/User/customer.cshtml
+++ b/Views/User/customer.cshtml
@@ -358,7 +358,7 @@
                     <span class="bg-opacity-50 bg-secondary p-1 rounded shadow btn fw-bold" onclick="swithLang()">
                         <span class="px-2" data-lang="lblLanguage">عربي</span>
                     </span>
-                    <a class="mx-3 mx-md-5 text-white" href="/" data-lang="lblProducts">Products</a>
+                    <a class="mx-3 mx-md-5 text-white" href="/" data-lang="lblProducts">Customer</a>
                 </div>
             </div>
             <div class="col-4">
