--- a/Views/Customer/Home.cshtml
+++ b/Views/Customer/Home.cshtml
@@ -11,6 +11,9 @@
 
         $(document).ready(function () {
 
+            $('#liPageName').text('Customer');
+            $('#h6PageName').text('Create');
+
             $('html').attr('lang', $('#hdnLang').val());
             $('html').attr('dir', $('#hdnDir').val());
 
