--- a/Views/Orders/Order.cshtml
+++ b/Views/Orders/Order.cshtml
@@ -56,6 +56,8 @@
 
         $(document).ready(function () {
 
+            $('#liPageName').text('Orders');
+            $('#h6PageName').text('Products');
             ///var jstr = '[{ "productId": "5", "count": "1", "productType": "frozen", "price": "1", "priceLbl": "1", "productName": "Chicken Thigh" }, { "productId": "6", "count": "1", "productType": "frozen", "price": "1", "priceLbl": "1", "productName": "Chicken Legs" }, { "productId": "7", "count": "1", "productType": "frozen", "price": "1", "priceLbl": "1", "productName": "Chicken Drumsticks" }, { "productId": "11", "count": "1", "productType": "fresh" }, { "productId": "12", "count": "1", "productType": "fresh" }, { "productId": "13", "count": "1", "productType": "fresheggs" }, { "productId": "14", "count": "1", "productType": "fresheggs" }]';
 
 
