--- a/Views/Shared/_ShoppingLayout.cshtml
+++ b/Views/Shared/_ShoppingLayout.cshtml
@@ -148,7 +148,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-cart-arrow-down text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Users</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Users</span>
                                 </a>
                             </li>
 
@@ -166,7 +166,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-cart-arrow-down text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Orders</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Orders</span>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -174,7 +174,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-bar-chart-o text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Sales Report</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Sales_Report</span>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -182,7 +182,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-users text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Customer</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Customer</span>
                                 </a>
                             </li>
 
@@ -191,7 +191,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-shopping-bag text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Voucher</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Voucher</span>
                                 </a>
                             </li>
 
@@ -200,7 +200,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-file-text-o text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Make Order</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Make_Order</span>
                                 </a>
                             </li>
                         }
@@ -212,7 +212,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-cart-arrow-down text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Orders</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Orders</span>
                                 </a>
                             </li>
 
@@ -221,7 +221,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-file-text-o text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Make Order</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Make_Order</span>
                                 </a>
                             </li>
 
@@ -236,7 +236,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-file-text-o text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Delivery</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Delivery</span>
                                 </a>
                             </li>
                         }
@@ -248,7 +248,7 @@
                                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                         <i class="fa fa-file-text-o text-primary text-sm opacity-10"></i>
                                     </div>
-                                    <span class="nav-link-text ms-1">Bookings</span>
+                                    <span class="nav-link-text ms-1">@Resources.Global.Bookings</span>
                                 </a>
                             </li>
 
@@ -279,11 +279,11 @@
                                 <a class="opacity-5 text-white no-printme" href="javascript:;">Pages</a>
                             </li>
                             <li class="breadcrumb-item text-sm text-white active no-printme"
-                                aria-current="page">
-                                Orders
+                                aria-current="page" id="liPageName">
+                                
                             </li>
                         </ol>
-                        <h6 class="font-weight-bolder text-white mb-0 no-printme">Orders</h6>
+                        <h6 class="font-weight-bolder text-white mb-0 no-printme" id="h6PageName"></h6>
                     </nav>
                     <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4"
                          id="navbar">
